2006-09-01  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Thomas Parmelan ]

	* Support for optional recursive purging (closes: #121)
	  + Added BM_REPOSITORY_RECURSIVEPURGE in backup-manager.conf.tpl (plus
	    examples).
	  + Documentation about BM_REPOSITORY_RECURSIVEPURGE in the user guide
	    (doc/user-guide.sgml and doc/user-guide.txt).
	  + Change the depth passed to "find" according to
	    BM_REPOSITORY_RECURSIVEPURGE in lib/files.sh.
	  + Make sure BM_REPOSITORY_RECURSIVEPURGE is set in lib/sanitize.sh.
	
	[ Alexis Sukrieh ]
	
	* Make sure the new variable BM_REPOSITORY_RECURSIVEPURGE is set in
	  base.conf so tests scripts don't produce warnings (t/confs/base.conf).
	* Test the purging system with/without recursion
	  (t/t14-purging-system.sh).

2006-09-01  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh:
	  + Applied patch from Thomas Parmelan for closing bug #120. The recursive
	    purging phase now uses 'find' for building the archive list.
		(closes: #120)
	* t/t14-purging-system.sh:
	  + Added some sub-directories in the test repository in order to
	    reproduce bug #120.

2006-09-01  Alexis Sukrieh  <sukria@backup-manager.org>

	* t/testlib.sh:
	  + That file was hit by bug#119 too, all the test scripts were broken.

2006-08-31  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/gettext.sh
	  + Do not source /usr/share/backup-manager but $libdir instead (was
	    breaking test scripts on boxes where BM isn't installed).
	* Replaced every #!/bin/sh by #!/bin/bash in test scripts.

2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/sanitize.sh:
	  + BM_UPLOAD_SSH_HOSTS, BM_UPLOAD_SSH_USER and
	    BM_UPLOAD_SSH_KEY are mandatory if BM_TARBALL_OVER_SSH is set to "true".
		(closes: #97).

2006-08-27  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Replaced static paths to external programs by $(which statement).
	    (closes: #114)
	* t/testlib.sh: