@@ -1,3 +1,10 @@
+2006-09-02  Alexis Sukrieh  <sukria@backup-manager.org>
+
+	* lib/upload-methods.sh:
+	  + Passes ssh options through the RSYNC_RSH environement variable instead
+	    of using the rsync -e switch in the command line.
+	    (closes: #122).
+
 2006-09-01  Alexis Sukrieh  <sukria@backup-manager.org>
 
 	[ Thomas Parmelan ]
